# tinkoff-invest-rust

./: .gitignore  Cargo.toml
examples/streaming/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
src/: tcs.rs
tests/: go.rs
